# trivia-activity

./: LICENSE  README.md  docker-compose.yml
client/: .eslintrc.cjs  Dockerfile  bun.lockb  index.html  package.json  tsconfig.app.json  vite.config.ts
client/src/: App.vue  main.ts  sdk.ts  socket.ts
client/src/assets/: pico.scss
client/src/components/: LoadingSpinner.vue
client/src/router/: index.ts
client/src/stores/: connection.ts  game.ts  settings.ts  user.ts
client/src/views/: GameView.vue  HomeView.vue  LobbyView.vue
server/: .dockerignore  Dockerfile  app.py  pyproject.toml  settings.py
server/api/: __init__.py  discord.py
server/app/: __init__.py  __main__.py  db.py  events.py  models.py  schemas.py  session.py  settings.py
server/app/api/: discord.py  trivia.py
server/app/db/: __init__.py  schemas.py
